<resources>
    <string name="app_name">UniPolls</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Имя</string>
    <string name="EmptyEditText">...</string>
    <string name="Email">Электронная почта</string>
    <string name="My_survey">Мои опросы</string>
    <string name="Exit">Выход</string>
    <string name="Login">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="details">Детали</string>
    <string name="date_created">Дата создания:</string>
    <string name="date_modified">Дата последнего изменения:</string>
    <string name="questions">Вопросы:</string>
    <string name="response_count">Количество ответов:</string>

    <string name="questions_fragment_title">Опросы</string>
    <string name="no_questions">Не найдено ни одного вопроса</string>
    <string name="add_new_poll">Добавить опрос</string>
    <string name="new_poll">Новый опрос</string>
    <string name="to_review_poll">Просмотр опроса</string>
    <string name="questions_count">Количество вопросов:</string>
    <string name="refresh">Обновить</string>

</resources>
