<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colourSMGreen"
    tools:context="ru.mediasoft.unipolls.other.router.BlankFragment">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <ImageButton
                android:id="@+id/monkey_logo"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"

                android:background="@drawable/monkey1"
                android:visibility="visible" />

            <TextView
                android:id="@+id/name_textview"
                style="@style/SMTitleTheme"

                android:layout_alignParentStart="true"

                android:layout_centerVertical="true"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/login_edittext"
                style="@style/SMTextTheme"

                android:layout_alignParentStart="true"
                android:layout_below="@+id/name_textview"

                android:text="@string/EmptyEditText"

                />

            <TextView
                android:id="@+id/pass_textview"
                style="@style/SMTitleTheme"
                android:layout_alignParentStart="true"

                android:layout_below="@+id/login_edittext"

                android:layout_marginTop="20dp"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/pass_edittext"
                style="@style/SMTextTheme"

                android:layout_alignParentStart="true"
                android:layout_below="@+id/pass_textview"
                android:text="@string/EmptyEditText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_below="@+id/pass_edittext"

                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">

                <Button
                    android:id="@+id/login_button"
                    style="@style/SMButtonTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Login" />

                <Button
                    android:id="@+id/registration_button"
                    style="@style/SMButtonContrastTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Registration" />
            </LinearLayout>


        </RelativeLayout>



</FrameLayout>
