<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mediasoft.unipolls.presentation.userInfo.UserInfoFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:ignore="UselessParent">

        <ImageButton
            android:src="@mipmap/ic_launcher"
            android:id="@+id/avatar_imagebtn"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/name_head"
            style="@style/SMTitleTheme"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/avatar_imagebtn"
            android:text="@string/Name" />

        <TextView
            android:id="@+id/name_user"
            style="@style/SMTextTheme"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_head"
            android:hint="Name" />

        <TextView
            android:id="@+id/email_head"
            style="@style/SMTitleTheme"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_user"
            android:layout_marginTop="15dp"
            android:text="@string/Email" />

        <TextView
            android:id="@+id/email_user"
            style="@style/SMTextTheme"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email_head"
            android:hint="email" />

        <Button
            android:id="@+id/go_to_survelist_btn"
            style="@style/SMButtonTheme"
            android:layout_width="wrap_content"
            android:layout_below="@+id/email_user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/My_survey" />

        <Button
            android:id="@+id/exit_btn"
            style="@style/SMButtonTheme"
            android:layout_width="wrap_content"
            android:layout_below="@+id/go_to_survelist_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/Exit"
            android:theme="@style/SMButtonTheme" />
    </RelativeLayout>

</FrameLayout>